fix: 修复 PMD 违规 + AfgCoreProperties TooManyFields 排除
- CsvDataImporter: trim().isEmpty() → isBlank(), for→while 循环
- DuplicateSubmitAspect: 保留原始异常堆栈
- DuplicateSubmitException: 添加带 cause 的构造函数
- PMD 规则: AfgCoreProperties 排除 TooManyFields 检查

Co-Authored-By: Claude <noreply@anthropic.com>